Resolve spacing and naming issues

--- a/src/EnterpriseCollabration/EnterpriseStyle.scss
+++ b/src/EnterpriseCollabration/EnterpriseStyle.scss
@@ -368,6 +368,17 @@
   margin-top: 20px !important;
 }
 
+.enterprise-file-upload-button {
+  text-transform: capitalize !important;
+  border-radius: 10px !important;
+  padding: 20px 15px !important;
+  font-size: 16px !important;
+}
+
+.enterprise-file-upload-container {
+  padding-left: 16px;
+}
+
 /* responsive.css */
 
 /* For small screens (max-width: 567px) */
